07_retirement/grade.txt
Grading at Wed Sep  9 03:59:44 UTC 2020
Attempting to compile retirement.c
retirement.c: In function ‘compute_balance’:
retirement.c:14:22: error: ‘rate_of’ undeclared (first use in this function)
   return balance*(1 +rate_of _return/12)+ contribution;
                      ^
retirement.c:14:22: note: each undeclared identifier is reported only once for each function it appears in
retirement.c:14:30: error: expected ‘)’ before ‘_return’
   return balance*(1 +rate_of _return/12)+ contribution;
                              ^
retirement.c:15:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
